Add presentation and awards

--- a/about/index.ja.html
+++ b/about/index.ja.html
@@ -125,7 +125,7 @@
             東北大学工学研究科機械・知能系　西澤・梶研究室　特任助教（JST COI-STREAM）（2015年4月より）<br>
 
             <h3>現在の研究</h3>
-                電気化学・材料科学をベースとした、皮膚貼り付け型センサ・治療デバイスの開発
+                材料化学・電気化学をベースとした、皮膚貼り付け型センサ・治療デバイスの開発
 
             <h3>過去の研究</h3>
             <ul>
@@ -142,9 +142,19 @@
                 <li>2006-2008: 東京大学大学院工学系研究科化学生命工学専攻　修士課程（指導教官：相田卓三教授）</li>
                 <li>2002-2006: 東京大学工学部化学生命工学科　学士課程</li>
             </ul>
+            <section id='award'>
+                <h3>受賞</h3>
+                <ol class='award' reversed>
+                    <li>第４回東北大学若手研究者アンサンブルワークショップ ポスター賞</li>
+                    <li>化学とマイクロ・ナノシステム学会 第37回研究会 優秀研究賞</li>
+                    <li>花王芸術・科学財団 花王科学奨励賞「親水性の階層的パターニングによる汗収集フィルムの開発」</li>
+                </ol>
+            </section>            
+
             <section id='grant'>
                 <h3>競争的研究資金・研究助成</h3>
                 <ol class='grant' reversed>
+                    <li>2018年度 東北大学 学際科学フロンティア研究所 領域創成研究プログラム「生体とデバイスとをシームレスに接続するハイブリッドインターフェースの開発」（分担）</li>
                     <li>2018年度 COI若手連携研究ファンド「皮膚組織液による皮膚がん診断・薬剤投与パッチの開発」（共同代表）</li>
                     <li>2018年度 花王科学奨励賞「親水性の階層的パターニングによる汗収集フィルムの開発」（代表）</li>
                     <li>2017年度 東北大学附置研究所若手アンサンブルグラント（第一ステージ）「生体埋込センサの長寿命化のための多孔質ポリマーによるバイオフィルタの開発と評価」（分担）</li>
