--- a/about/skininterface.ja.html
+++ b/about/skininterface.ja.html
@@ -21,12 +21,14 @@
     }
     ol.publication li {
         margin-bottom: 10px;
+        font-size: 16px ! important;
     }
     a.nohover:hover {
         cursor: default;
         color: #999999 ! important;
         background: black ! important;
     }
+
 
 </style>
 <style type="text/css">
