Update top page more

--- a/about/index.html
+++ b/about/index.html
@@ -116,7 +116,7 @@
                 Welcome to Hiro Kai's website!<br>Taking advantage of materials chemistry, I develop a wearable patch that interacts with living skin.
             </section>
             <section id='affiliation'>
-                <h3>Current affiliation</h3>
+                <h3>Affiliation</h3>
                 Department of Engineering, Tohoku University (from April, 2015).<br>
             </section>
             <section id='research'>
