--- a/about/index.ja.html
+++ b/about/index.ja.html
@@ -29,6 +29,10 @@
         background: black ! important;
     }
 
+    .monospace {
+        font-family: Osaka−等幅, monospace, "ＭＳ ゴシック", "MS Gothic";
+    }
+
 
 </style>
 <style type="text/css">
@@ -123,6 +127,8 @@
             <div class="photo-annotation">ギリシャ サントリーニ島からの眺め</div>
             <p class="lead">材料化学をベースにし、皮膚と密接に相互作用するウェアラブルデバイスへと展開しています。</p>
 
+            <p class='news'>ニュース： <a href="presentation.ja.html">学会発表予定</a>を更新しました（2018/11/21）</p>
+
             <h3>所属</h3>
             東北大学工学研究科ファインメカニクス専攻　特任助教（西澤・梶研究室; JST COI-STREAM）（2015年4月より）<br>
 
@@ -157,6 +163,8 @@
             <section id='grant'>
                 <h3>競争的研究資金・研究助成</h3>
                 <ol class='grant' reversed>
+                    <li>2018年度 東北大学附置研究所若手アンサンブルグラント（第一ステージ）「足を護りセンシングするアフリカ地下足袋の協創に関する研究」（分担）</li>
+                    <li>2018年度 東北大学附置研究所若手アンサンブルグラント（第二ステージ）「生体埋込センサの長寿命化のための多孔質ポリマーによるハイブリッドフィルタの開発」（分担）</li>
                     <li>2018年度 東北大学 学際科学フロンティア研究所 領域創成研究プログラム「生体とデバイスとをシームレスに接続するハイブリッドインターフェースの開発」（分担）</li>
                     <li>2018年度 COI若手連携研究ファンド「皮膚組織液による皮膚がん診断・薬剤投与パッチの開発」（共同代表）</li>
                     <li>2018年度 花王科学奨励賞「親水性の階層的パターニングによる汗収集フィルムの開発」（代表）</li>
