--- a/about/nanobio.html
+++ b/about/nanobio.html
@@ -30,6 +30,10 @@
         background: black ! important;
     }
 
+    .monospace {
+        font-family: Osaka−等幅, monospace, "ＭＳ ゴシック", "MS Gothic";
+    }
+
 
 </style>
 <style type="text/css">
