--- a/about/publication.html
+++ b/about/publication.html
@@ -101,6 +101,7 @@
         <div class="col-md-12">
              <section id='publication'>
                 <ul class='researcher-id'>
+            <li>Google Scholar Profile: <a href="https://scholar.google.co.jp/citations?user=1ARpHr0AAAAJ">1ARpHr0AAAAJ</a></li>
                   <li>
                     ORCID: <a href="http://orcid.org/0000-0002-3544-9196">0000-0002-3544-9196</a>
                   </li>
