--- a/about/grants.html
+++ b/about/grants.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Contact</title>
+    <title>Research grants - Hiro Kai</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -15,6 +15,7 @@
     <!-- Add custom CSS here -->
     <link href="css/simple-sidebar.css" rel="stylesheet">
 <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+
 <style>
     a.lang {
         display: inline ! important;
@@ -37,27 +38,18 @@
 </style>
 <style type="text/css">
     .lead {
-        color: #600;
+        color: #006;
     }
-    #sidebar-wrapper{
-        background: #200;
+        #sidebar-wrapper{
+        background: #002;
     }
     a.nohover:hover {
         cursor: default;
         color: #999999 ! important;
-        background: #200 ! important;
+        background: #002 ! important;
     }
+
 </style>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-47555853-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
 
 </head>
 
@@ -68,58 +60,62 @@
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
-<!--                <li class="sidebar-brand"><a href="#">Contents</a>
-                </li> -->
-                <li><a href="index.ja.html">トップ</a>
+                <li><a href="index.html">Top</a>
                 <ul>
-                    <li><a href="publication.ja.html">論文</a></li>
-                    <li><a href="presentation.ja.html">学会発表</a></li>
-                    <li><a href="grants.ja.html">外部研究資金</a></li>
+                    <li><a href="publication.html">Publication</a></li>
+                    <li><a href="presentation.html">Presentations</a></li>
+                    <li><a href="grants.html">Grants</a></li>
                 </ul>
                 </li>
-                <li><a class='nohover' href="#">研究内容・興味</a>
+                <li><a class='nohover' href="#">Research interests</a>
                 <ul>
-                    <li><a href="skininterface.ja.html">皮膚インターフェイス</a></li>
-                    <li><a href="programming.ja.html">プログラミング </a></li>
+                    <li><a href="skininterface.html">Epidermal interfaces</a></li>
+                    <li><a href="programming.html">Programming</a></li>
                 </ul>
-                <li><a class='nohover' href="#">過去の研究</a>
+                <li><a class='nohover' href="#">Past projects</a>
                 <ul>
-                    <li><a href="nanobio.ja.html">ナノバイオ</a></li>
-                    <li><a href="chemistry.ja.html">超分子機械・高分子材料</a></li>
+                    <li><a href="nanobio.html">Nano-bio interfaces</a></li>
+                    <li><a href="chemistry.html">Chemistry</a></li>
                 </ul>
                 </li>
-                <li><a href="skills.ja.html">スキル</a>
-                <li><a href="contact.ja.html">連絡先</a>
+                <li><a href="skills.html">Skills</a>
+                <li><a href="contact.html">Contact</a>
                 <li><a class='nohover' href="#">&nbsp;</a></li>
-                <li><small><a class='lang' href="./contact.html">English</a> / <a class='lang' href="./contact.ja.html">Japanese</a></small></li>
+                <li><small><a class='lang' href="./grants.html">English</a> / <a class='lang' href="./grants.ja.html">Japanese</a></small></li>
                 </li>
             </ul>
         </div>
 
+
         <!-- Page content -->
         <div id="page-content-wrapper">
-        
-
+            
 <div class="content-header">
     <h1>
         <a id="menu-toggle" href="#" class="btn btn-default"><i class="icon-reorder"></i></a>
-        連絡先
+        Research grants
     </h1>
 </div>
 <!-- Keep all page content within the page-content inset div! -->
 <div class="page-content inset">
     <div class="row">
         <div class="col-md-12">
-            <div>
-                甲斐洋行 (Hiroyuki Kai) <br>
-                東北大学　工学研究科　機械・知能系<br>
-                <br>
-                Email: kai[at]tohoku[dot]ac[dot]jp<br>
-                Phone: +81-22-795-3586
-            </div>
+            <section id='grant'>
+                <ol class='grant' reversed>
+                    <li>2018 Tohoku University Research Institutes Ensemble Grant for Young Researchers, 1st stage.</li>                    <li>2018 Tohoku University Research Institutes Ensemble Grant for Young Researchers, 2nd stage.</li>                    <li>2018 Tohoku University FRIS Creative Interdisciplinary Research Program.</li>
+                    <li>2018 COI research grant for collaborative research by young researchers.</li>
+                    <li>2018 The Kao Science Encouragement Award.</li>
+                    <li>2017 Tohoku University Research Institutes Ensemble Grant for Young Researchers, 1st stage.</li>
+                    <li>2017-2018 JSPS Grant-in-Aid for Young Scientists (B): &quot;Development of multiplexed microneedle array for vital sensing on skin.&quot;</li>
+                    <li>2017 COI research grant for collaborative research by young researchers.</li>
+                </ol>
+            </section>      
         </div>
     </div>
 </div>
+
+
+
         </div>
 
     </div>
