--- a/about/grants.ja.html
+++ b/about/grants.ja.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>皮膚インターフェイス</title>
+    <title>外部研究資金 - 甲斐洋行</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -91,7 +91,7 @@
                 <li><a href="skills.ja.html">スキル</a>
                 <li><a href="contact.ja.html">連絡先</a>
                 <li><a class='nohover' href="#">&nbsp;</a></li>
-                <li><small><a class='lang' href="./skininterface.html">English</a> / <a class='lang' href="./skininterface.ja.html">Japanese</a></small></li>
+                <li><small><a class='lang' href="./grants.html">English</a> / <a class='lang' href="./grants.ja.html">Japanese</a></small></li>
                 </li>
             </ul>
         </div>
@@ -99,39 +99,39 @@
         <!-- Page content -->
         <div id="page-content-wrapper">
         
-
-
- <div class="content-header">
+<div class="content-header">
     <h1>
         <a id="menu-toggle" href="#" class="btn btn-default"><i class="icon-reorder"></i></a>
-        皮膚インターフェイス
+        外部研究資金
     </h1>
 </div>
 <!-- Keep all page content within the page-content inset div! -->
 <div class="page-content inset">
-    <div class='row'>
-        <img src="img/nanobio.jpg" height='220px' style='margin: -20px -50px 0px -20px;'>
-    </div>
     <div class="row">
         <div class="col-md-12">
-            <p class="lead">
-                皮膚は人体最大の臓器であり、外部からの生体の保護を果たすとともに、生体情報の取得や摂動付与（薬剤投与や電気刺激など）が可能な生体と外部のインターフェイスとして機能しています。皮膚を介した情報・物質の出し入れを効率化するための材料を開発し、生体への応用を展開しています。
-            </p>
-        </div>
-        <div class="col-md-6">
-            <h3>多孔質マイクロニードル</h3>
-            <img src="img/microneedles.jpg" width="300"  height="200"><br>
-            マイクロニードルとは、数百µm程度の長さの針を二次元状に多数配列させた構造であり、皮膚組織液の採取や皮膚内への投薬を効率的かつ非侵襲に行うことができます。私たちは、多孔質樹脂からなるマイクロニードルを作成することで、毛細管現象による迅速な皮膚組織液採取と、皮膚刺入に十分な機械的強度を両立することに成功しました。これを用いて、センシングや投薬への展開を試みています。(L. Liu et al., <a href='http://pubs.rsc.org/en/content/articlelanding/2016/ra/c6ra07882f'>RSC Advances 2016</a>)
-        </div>
-        <div class="col-md-6">
-            <h3>微小液滴収集フィルム</h3>
-            <img src="img/stub.png" width="300"  height="200"><br>
-            濡れ性のパターニングによって、液滴を収集するフィルムを開発し、汗の収集への展開を図っています。
-            （H. Kai et al., RSC Advances, in press.）。
-
+            <h3 id='plan'>科研費</h3>
+                <ol class='grant' reversed>
+                    <li>2017-2018年度 科研費 若手(B)「皮膚生体情報のマルチモーダル計測のための微小針アレイの開発」（代表）</li>
+                </ol>
+            <h3 id='plan'>財団助成金</h3>
+                <ol class='grant' reversed>
+                    <li>2018年度 花王科学奨励賞「親水性の階層的パターニングによる汗収集フィルムの開発」（代表）</li>
+                </ol>
+            <h3 id='plan'>委託研究費・学内グラント</h3>
+                <ol class='grant' reversed>
+                    <li>2018年度 東北大学附置研究所若手アンサンブルグラント（第一ステージ）「足を護りセンシングするアフリカ地下足袋の協創に関する研究」（分担）</li>
+                    <li>2018年度 東北大学附置研究所若手アンサンブルグラント（第二ステージ）「生体埋込センサの長寿命化のための多孔質ポリマーによるハイブリッドフィルタの開発」（分担）</li>
+                    <li>2018年度 東北大学 学際科学フロンティア研究所 領域創成研究プログラム「生体とデバイスとをシームレスに接続するハイブリッドインターフェースの開発」（分担）</li>
+                    <li>2018年度 COI若手連携研究ファンド「皮膚組織液による皮膚がん診断・薬剤投与パッチの開発」（共同代表）</li>
+                    <li>2017年度 東北大学附置研究所若手アンサンブルグラント（第一ステージ）「生体埋込センサの長寿命化のための多孔質ポリマーによるバイオフィルタの開発と評価」（分担）</li>
+                    <li>2017年度 COI若手連携研究ファンド「細胞外ATPを指標とする皮膚がん診断・薬剤投与パッチの開発」（共同代表）</li>
+                </ol>
         </div>
     </div>
 </div>
+
+
+
         </div>
 
     </div>
