--- a/about/index.html
+++ b/about/index.html
@@ -64,6 +64,7 @@
                 <ul>
                     <li><a href="publication.html">Publication</a></li>
                     <li><a href="presentation.html">Presentations</a></li>
+                    <li><a href="grants.html">Grants</a></li>
                 </ul>
                 </li>
                 <li><a class='nohover' href="#">Research interests</a>
@@ -145,19 +146,7 @@
                     <li>2006-2008: Department of Chemistry and Biotechnology, The University of Tokyo (Master of Engineering)</li>
                     <li>2002-2006: Department of Chemistry and Biotechnology, The University of Tokyo (Bachelor of Engineering)</li>
                 </ul>
-            </section>
-
-            <section id='grant'>
-                <h3>Research grants</h3>
-                <ol class='grant' reversed>
-                    <li>2018 Tohoku University FRIS Creative Interdisciplinary Research Program.</li>
-                    <li>2018 COI research grant for collaborative research by young researchers.</li>
-                    <li>2018 The Kao Science Encouragement Award.</li>
-                    <li>2017 Tohoku University Research Institutes Ensemble Grant for Young Researchers.</li>
-                    <li>2017-2018 JSPS Grant-in-Aid for Young Scientists (B): &quot;Development of multiplexed microneedle array for vital sensing on skin.&quot;</li>
-                    <li>2017 COI research grant for collaborative research by young researchers.</li>
-                </ol>
-            </section>            
+            </section>      
         </div>
     </div>
 </div>
