--- a/about/nanobio.html
+++ b/about/nanobio.html
@@ -64,6 +64,7 @@
                 <ul>
                     <li><a href="publication.html">Publication</a></li>
                     <li><a href="presentation.html">Presentations</a></li>
+                    <li><a href="grants.html">Grants</a></li>
                 </ul>
                 </li>
                 <li><a class='nohover' href="#">Research interests</a>
