--- a/about/nanobio.ja.html
+++ b/about/nanobio.ja.html
@@ -74,6 +74,7 @@
                 <ul>
                     <li><a href="publication.ja.html">論文</a></li>
                     <li><a href="presentation.ja.html">学会発表</a></li>
+                    <li><a href="grants.ja.html">外部研究資金</a></li>
                 </ul>
                 </li>
                 <li><a class='nohover' href="#">研究内容・興味</a>
