--- a/about/index.ja.html
+++ b/about/index.ja.html
@@ -98,6 +98,7 @@
         <!-- Page content -->
         <div id="page-content-wrapper">
         
+
 <head>
     <style type="text/css">
         body {
@@ -108,7 +109,6 @@
             text-align: right;
             margin-top: -20px;
         }
-
     </style>
 </head>
 
@@ -127,13 +127,11 @@
             <div class="photo-annotation">ギリシャ サントリーニ島からの眺め</div>
             <p class="lead">材料化学をベースにし、皮膚と密接に相互作用するウェアラブルデバイスへと展開しています。</p>
 
-            <p class='news'>ニュース： <a href="presentation.ja.html">学会発表</a>を更新しました（2019/1/14)</p>
-
             <h3>所属</h3>
             東北大学工学研究科ファインメカニクス専攻　特任助教（西澤・梶研究室; JST COI-STREAM）（2015年4月より）<br>
 
             <h3>研究内容</h3>
-                有機材料化学・電気化学を基盤とした、皮膚貼り付け型センサ・治療デバイスの開発
+            有機材料化学・電気化学を基盤とした、皮膚貼り付け型センサ・治療デバイスの開発
 
             <h3>過去の研究内容</h3>
             <ul>
@@ -154,15 +152,15 @@
                 <h3>受賞</h3>
                 <ol class='award' reversed>
                     <li>2018年7月 第４回東北大学若手研究者アンサンブルワークショップ ポスター賞</li>
-                    <li>2018年6月 Biosensors &amp; Bioelectronics Best Paper Award 2018 Runner Up "Organic electrochromic timer for enzymatic skin patches"</li>
+                    <li>2018年6月 Biosensors &amp; Bioelectronics Best Paper Award 2018 Runner Up "Organic electrochromic
+                        timer for enzymatic skin patches"</li>
                     <li>2018年5月 化学とマイクロ・ナノシステム学会 第37回研究会 優秀研究賞</li>
                     <li>2018年3月 花王芸術・科学財団 花王科学奨励賞「親水性の階層的パターニングによる汗収集フィルムの開発」</li>
                 </ol>
-            </section>                
+            </section>
         </div>
     </div>
 </div>
-
         </div>
 
     </div>
