Add grant proposal title

--- a/about/grants.ja.html
+++ b/about/grants.ja.html
@@ -114,7 +114,8 @@
             </ol>
             <h3 id='plan'>財団助成金</h3>
             <ol class='grant' reversed>
-                <li>田中貴金属記念財団 2018年度「貴金属に関わる研究助成金」萌芽賞（代表）</li>
+                <li>田中貴金属記念財団 2018年度「貴金属に関わる研究助成金」萌芽賞「多孔質マイクロニードル電極の開発と高精度経皮
+投薬への応用」（代表）</li>
                 <li>2018年度 中谷医工計測技術振興財団 技術開発研究助成【奨励研究】「皮膚上の微小流体制御による汗成分センサの開発」（代表）</li>
                 <li>2018年度 花王科学奨励賞「親水性の階層的パターニングによる汗収集フィルムの開発」（代表）</li>
             </ol>
