--- a/about/index.html
+++ b/about/index.html
@@ -121,11 +121,11 @@
             </section>
             <section id='affiliation'>
                 <h3>Affiliation</h3>
-                Department of Engineering, Tohoku University (from April, 2015).<br>
+                Advanced Institute for Materials Research (AIMR), Tohoku University (from April, 2019).<br>
             </section>
             <section id='research'>
                 <h3>Current topic of research</h3>
-                    Development of flexible biosensors based on materials science and electrochemistry.
+                    Development of wearable biosensors based on materials science and electrochemistry.
             </section>
             <section id='research-past'>
                 <h3>Past topics of research</h3>
@@ -139,7 +139,8 @@
             <section id='experience'>
                 <h3>Education and experience</h3>
                 <ul>
-                    <li>2015-: Research Assistant Professor, Department of Engineering, Tohoku University.</li>
+                    <li>2019: Research Associate, Advanced Institute for Materials Research, Tohoku University</li>
+                    <li>2015-2019: Research Associate, Department of Engineering, Tohoku University.</li>
                     <li>2010-2015: Graduate Student Researcher, Department of Chemistry, University of California, Berkeley. PhD in Chemistry.</li>
                     <li>2008-2010: Researcher, Nanoelectronics Laboratory, NEC Corporation.</li>
                     <li>2006-2008: Department of Chemistry and Biotechnology, The University of Tokyo (Master of Engineering)</li>
