--- a/about/index.ja.html
+++ b/about/index.ja.html
@@ -127,8 +127,10 @@
             <div class="photo-annotation">ギリシャ サントリーニ島からの眺め</div>
             <p class="lead">材料化学をベースにし、皮膚と密接に相互作用するウェアラブルデバイスへと展開しています。</p>
 
+            <p>ニュース：　2019年4月1日付けでAIMRに移籍しました。</p>
+
             <h3>所属</h3>
-            東北大学工学研究科ファインメカニクス専攻　特任助教（西澤・梶研究室; JST COI-STREAM）（2015年4月より）<br>
+            東北大学材料科学高等研究所（AIMR）助教（Y.P.Chen-Kumatani Group）（2019年4月より）<br>
 
             <h3>研究内容</h3>
             有機材料化学・電気化学を基盤とした、皮膚貼り付け型センサ・治療デバイスの開発
@@ -142,7 +144,8 @@
 
             <h3>経歴</h3>
             <ul>
-                <li>2015-: 東北大学工学研究科ファインメカニクス専攻　特任助教</li>
+                <li>2019-: 東北大学材料科学高等研究所（AIMR） 助教</li>
+                <li>2015-2019: 東北大学工学研究科ファインメカニクス専攻　特任助教</li>
                 <li>2010-2015: カリフォルニア大学バークレー校化学科大学院。PhD in Chemistry（指導教官：Jay T. Groves教授）</li>
                 <li>2008-2010: 日本電気ナノエレクトロニクス研究所</li>
                 <li>2006-2008: 東京大学大学院工学系研究科化学生命工学専攻　修士課程（指導教官：相田卓三教授）</li>
