--- a/about/grants.ja.html
+++ b/about/grants.ja.html
@@ -110,7 +110,8 @@
         <div class="col-md-12">
             <h3 id='plan'>科研費</h3>
             <ol class='grant' reversed>
-                <li>2017-2018年度 科研費 若手(B)「皮膚生体情報のマルチモーダル計測のための微小針アレイの開発」（代表）</li>
+                <li>2019-2020年度 科研費 若手研究「効率的に体液を採取するウェアラブル材料・デバイスの開発」（代表）</li>
+                <li>2017-2018年度 科研費 若手研究(B)「皮膚生体情報のマルチモーダル計測のための微小針アレイの開発」（代表）</li>
             </ol>
             <h3 id='plan'>財団助成金</h3>
             <ol class='grant' reversed>
