Add date for ISCD2006

--- a/about/presentation.ja.html
+++ b/about/presentation.ja.html
@@ -148,7 +148,7 @@
                 <li><span class='authors'>甲斐洋行, 金原数, 相田卓三<br/></span><span class='title'>超分子機械の設計：動力の遠距離伝達への挑戦<br/></span><span class='conference'><a href='http://csj.jp/nenkai/88haru/data/prog-88.html#K4'>日本化学会第88春季年会</a> (2008/3/26; 立教大学池袋キャンパス, 東京)<br/></span></li>
                 <li><span class='authors'>甲斐洋行, 金原数, 相田卓三<br/></span><span class='title'>機械的動きの遠距離伝達を実現する超分子機械の設計<br/></span><span class='conference'><a href='http://www.csj.jp/nenkai/87haru/data/prog-87.html#E4'>日本化学会第87春季年会</a> (2007/3/28; 関西大学千里山キャンパス, 大阪)<br/></span></li>
                 <li><span class='authors'>甲斐洋行, 金原数, 相田卓三<br/></span><span class='title'>分子の遠隔操作のための超分子機械の設計<br/></span><span class='conference'>錯体化学会第56回討論会 (Sep, 2007; 広島大学, 広島)<br/></span></li>
-                <li><span class='authors'>Hiroyuki Kai, Kazushi Kinbara, Takuzo Aida<br/></span><span class='title'>Supramolecular Machine for Conformational Remote Control of Chiral Molecules<br/></span><span class='conference'>18th International Symposium on Chirality (June, 2006; Busan, South Korea)<br/></span></li>
+                <li><span class='authors'>Hiroyuki Kai, Kazushi Kinbara, Takuzo Aida<br/></span><span class='title'>Supramolecular Machine for Conformational Remote Control of Chiral Molecules<br/></span><span class='conference'>18th International Symposium on Chirality (2006/6/26; Busan, South Korea)<br/></span></li>
                 <li><span class='authors'>甲斐洋行, 奈良真治, 村岡貴博, 金原数, 相田卓三<br/></span><span class='title'>光駆動超分子機械の分子設計<br/></span><span class='conference'><a href='http://www.csj.jp/nenkai/86haru/prog-86.html#K3'>日本化学会第86春季年会</a> (2006/3/30; 日本大学船橋キャンパス, 船橋)<br/></span></li>
             </ol>
         </div>
