Add presentation schedule

--- a/about/presentation.ja.html
+++ b/about/presentation.ja.html
@@ -101,7 +101,7 @@
 <div class="content-header">
     <h1>
         <a id="menu-toggle" href="#" class="btn btn-default"><i class="icon-reorder"></i></a>
-        学会発表
+        学会等の発表
     </h1>
 </div>
 <!-- Keep all page content within the page-content inset div! -->
@@ -111,7 +111,8 @@
             <h3 id='plan'>発表予定</h3>
             <p>自分で行う発表のみを表記</p>
             <ul class='publication' reversed>
-                <li>（To be announced）</li>
+                <li>2019年&nbsp;&nbsp;5月&nbsp;&nbsp;27日 14:30-16:30 <a href="http://micro-nano.chips.jp/39/?post_type=program">第３９回 化学とマイクロ・ナノシステム学会</a>（金沢大学 宝町・鶴間キャンパス）<br>「任意の凸多角形を充填するフラクタル開放型流路の設計」（ポスター発表）</li>
+            <li>2019年&nbsp;&nbsp;5月&nbsp;&nbsp;30日 14:30-14:55 <a href="https://shingi.jst.go.jp/kobetsu/COI/2019_coi.html">JSTセンター・オブ・イノベーション（COI）プログラム　新技術説明会　～ヘルスケア関連～</a>（JST東京本部別館1Fホール）<br>「新規構造マイクロニードルによる疾患診断・治療デバイス」（口頭発表）</li>
             </ul>
 
             <h3>発表</h3>
