Update research description

--- a/about/index.ja.html
+++ b/about/index.ja.html
@@ -133,7 +133,7 @@
             東北大学材料科学高等研究所（AIMR）助教（Y.P.Chen-Kumatani Group）（2019年4月より）<br>
 
             <h3>研究内容</h3>
-            有機材料化学・電気化学を基盤とした、皮膚貼り付け型センサ・治療デバイスの開発
+            有機材料化学に立脚した，皮膚貼り付け型センサ・治療デバイスのための材料開発と生体応用
 
             <h3>過去の研究内容</h3>
             <ul>
