--- a/about/presentation.ja.html
+++ b/about/presentation.ja.html
@@ -109,15 +109,16 @@
     <div class="row">
         <div class="col-md-12">
             <h3 id='plan'>発表予定</h3>
-            <p>自分で行う発表のみを表記</p>
+            <p>自分で行う発表のみを表記。</p>
             <ul class='publication' reversed>
-                <li>2019年&nbsp;&nbsp;5月&nbsp;&nbsp;27日 14:30-16:30 <a href="http://micro-nano.chips.jp/39/?post_type=program">第３９回 化学とマイクロ・ナノシステム学会</a>（金沢大学 宝町・鶴間キャンパス）<br>「任意の凸多角形を充填するフラクタル開放型流路の設計」（ポスター発表）</li>
-            <li>2019年&nbsp;&nbsp;5月&nbsp;&nbsp;30日 14:30-14:55 <a href="https://shingi.jst.go.jp/kobetsu/COI/2019_coi.html">JSTセンター・オブ・イノベーション（COI）プログラム　新技術説明会　～ヘルスケア関連～</a>（JST東京本部別館1Fホール）<br>「新規構造マイクロニードルによる疾患診断・治療デバイス」（口頭発表）</li>
+                <li>To be announced.</li>
             </ul>
 
             <h3>発表</h3>
             <p>自分で行った発表のみを表記。</p>
             <ol class='publication' reversed>
+                <li><span class='authors'>甲斐洋行<br/></span><span class='title'>新規構造マイクロニードルによる疾患診断・治療デバイス<br/></span><span class='conference'><a href='https://shingi.jst.go.jp/kobetsu/COI/2019_coi.html'>JSTセンター・オブ・イノベーション（COI）プログラム　新技術説明会　～ヘルスケア関連～</a> (2019/5/30; JST東京本部別館1Fホール)<br/></span></li>
+                <li><span class='authors'>甲斐洋行<br/></span><span class='title'>任意の凸多角形を充填するフラクタル開放型流路の設計<br/></span><span class='conference'><a href='http://micro-nano.chips.jp/39/?post_type=program'>第３９回 化学とマイクロ・ナノシステム学会</a> (2019/5/27; 金沢大学 宝町・鶴間キャンパス, 金沢)<br/></span></li>
                 <li><span class='authors'>甲斐洋行<br/></span><span class='title'>新たな経皮インターフェイスのための高分子材料・デバイス<strong>（招待講演）</strong><br/></span><span class='conference'><a href='http://res.tagen.tohoku.ac.jp/~polymer/event/19ev01.html'>平成30年度東北地区先端高分子セミナー</a> (2019/3/4; 秋保温泉岩沼屋, 仙台)<br/></span></li>
                 <li><span class='authors'>甲斐洋行, 加藤悠人，豊里涼馬, 西澤松彦<br/></span><span class='title'>貼付型乳酸センサの作製と皮膚模倣環境での評価<br/></span><span class='conference'><a href='https://www.mrs-j.org/meeting2018/jp/prg/programList_oral.php?id=B-5'>第28回日本MRS年次大会</a> (2018/12/19; 北九州国際会議場, 北九州)<br/></span></li>
                 <li><span class='authors'>甲斐洋行，熊田裕希，西澤松彦<br/></span><span class='title'>蛍光グルコースセンサを一体化した多孔質樹脂マイクロニードル<br/></span><span class='conference'><a href='https://www.mrs-j.org/meeting2018/jp/prg/programList_oral.php?id=F-3'>第28回日本MRS年次大会</a> (2018/12/19; 北九州国際会議場, 北九州)<br/></span></li>
