--- a/about/chemistry.ja.html
+++ b/about/chemistry.ja.html
@@ -46,6 +46,12 @@
         color: #999999 ! important;
         background: #200 ! important;
     }
+    .btn:focus,.btn:active {
+        outline: none !important;
+    }
+    .btn.active {
+        font-weight: bold;
+    }
 </style>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -57,7 +63,6 @@
   ga('send', 'pageview');
 
 </script>
-
 </head>
 
 <body>
@@ -142,6 +147,7 @@
         $("#wrapper").toggleClass("active");
     });
     </script>
+    <script src='js/main.js'></script>
 </body>
 
 </html>
