--- a/about/presentation.html
+++ b/about/presentation.html
@@ -99,38 +99,35 @@
 <div class="page-content inset">
     <div class="row">
         <div class="col-md-12">
-          <section id='presentation'>
-            <ol class='publication' reversed>
-                <li><li data-kind=''>Hiroyuki Kai, Ryoma Toyosato, Matsuhiko Nishizawa “Mechanism for droplet collection by open microfluidic channels with hierarchically branching structures“, Cheminas 37, Tsukuba, Japan (2018).</li></li>
-                <li><li data-kind=''>Hiroyuki Kai, Ryoma Toyosato, Matsuhiko Nishizawa ““Mathematical microfluidics” – fractal, space-filling open microfluidic channels for the efficient collection of water droplets.“, CEMSupra 2018, Tokyo, Japan (2018).</li></li>
-                <li><li data-kind=''>Hiroyuki Kai, Hiroki Kumata, Jun Kubota, Shinya Kusama, Kuniaki Nagamine, Matsuhiko Nishizawa “Development of porous polymer microneedles and their applications to transdermal interfaces“, 27th Annual Meeting of MRS-J, Yokohama, Japan (2017).</li></li>
-                <li><li data-kind=''>Hiroyuki Kai, Hiroki Kumata, Jun Kubota, Matsuhiko Nishizawa “Porous microneedle array made of a polymer monolith for the analysis of interstitial fluid“, 66th Symposium on Macromolecules, Matsuyama, Japan (2017).</li></li>
-                <li><li data-kind=''>Hiroyuki Kai, Ryoma Toyosato, Matsuhiko Nishizawa “Water collection by hierarchical patterning of surface wettability“, The 78th JSAP Autumn Meeting, Fukuoka, Japan (2017).</li></li>
-                <li><li data-kind=''>Hiroyuki Kai “Development of wearable sweat sensor patches made of organic and polymer materials“ (Invited), ISPAC 2017, Ho Chi Minh City, Vietnam (2017).</li></li>
-                <li><li data-kind=''>Hiroyuki Kai, Ayaka Tsubota, Yudai Ogawa, Matsuhiko Nishizawa “Accelerated would healing by an enzymatic biofuel cell plaster“ (Invited), 26th Annual Meeting of MRS-J, Yokohama, Japan (2016).</li></li>
-                <li><li data-kind=''>Hiroyuki Kai “Development of enzymatic biofuel cells toward epidermal electronics” (Invited), Semi-Conference, Aomori, Japan (2016).</li></li>
-                <li><li data-kind=''>Hiroyuki Kai, Liming Liu, Kuniaki Nagamine, Yudai Ogawa, Matsuhiko Nishizawa “Porous Polymer Microneedles with Interconnecting Microchannels Toward Efficient Sensing of Interstitial Fluid”, PRiME 2016, Honolulu, HI, USA (2016).</li></li>
-                <li><li data-kind=''>Hiroyuki Kai, Liming Liu, Kuniaki Nagamine, Yudai Ogawa, Matsuhiko Nishizawa “Porous polymer microneedles toward the efficient interface with skin”, ICFPE 2016, Yonezawa, Japan (2016).</li></li>
-                <li><li data-kind=''>Hiroyuki Kai, Kuniaki Nagamine, Matsuhiko Nishizawa “Stretchable Patches and Devices Toward Electronics on the Skin” (Invited), IEEE Nano 2016, Sendai, Japan (2016).</li></li>
-                <li><li data-kind=''>Hiroyuki Kai, Liming Liu, Kuniaki Nagamine, Yudai Ogawa, Matsuhiko Nishizawa “Polymer microneedle arrays with continuous pores for minimally invasive monitoring of interstitial fluid”, The 83rd Meeting of the Electrochemical Society of Japan, Osaka, Japan (2016).</li></li>
-                <li><li data-kind=''>M. Nishizawa, K. Nagamine, H. Kai “Organic skin patch with built-in enzymatic battery”, MEMS 2016, Shanghai, China (2016).</li></li>
-                <li><li data-kind=''>H. Kai, S. Chihara, D. Okabe, K. Nagamine and M. Nishizawa “Electrode-Hydrogel Hybrids for Biocompatible, Stretchable Electronics”, 25th Annual Meeting of MRS-J, Yokohama, Japan (2015)</li></li>
-                <li><li data-kind=''>H. Kai, N. Caculitan, T. Lohmüller, E. Liu, N. Fay, Y. Yu, J. T. Groves “Dynamic behavior of TCR microclusters on a live cell investigated by a gold nanoparticle array”, Biophysical Society 58th Annual Meeting, San Francisco, CA (2014).</li></li>
-                <li><li data-kind=''>H. Kai, N. Caculitan, T. Lohmüller, E. Liu, N. Fay, Y. Yu, J. T. Groves “Investigating the Dynamic Behavior of TCR Microclusters by a Gold Nanoparticle Array”, Biophysical Society 57th Annual Meeting, Philadelphia, PA (2013).</li></li>
-                <li><li data-kind=''>H. Kai, N. Morishita, M. Iji “Self-assembled nanoparticles with three functional layers for toughening of brittle thermoplastic”, The 18th Polymer Materials Forum, Funabori, Japan (2009).</li></li>
-                <li><li data-kind=''>H. Kai, K. Kinbara, T. Aida “Design of Supramolecular Machines:  A Mechanism for Power Transmission to a Spatially Remote Place”, The 88th Annual Meeting of the Chemical Society of Japan, Tokyo, Japan (2008).</li></li>
-                <li><li data-kind=''>H. Kai, K. Kinbara, T. Aida “Design of Supramolecular Machines for Remote Transmission of Mechanical Motions”, The 87th Annual Meeting of the Chemical Society of Japan, Osaka, Japan (2007).</li></li>
-                <li><li data-kind=''>H. Kai, K. Kinbara, T. Aida “Design of Supramolecular Machines for Remote Control of Molecules”, The 56th Japan Society of Coordination Chemistry Annual Meeting, Hiroshima, Japan (2006).</li></li>
-                <li><li data-kind=''>H. Kai, K. Kinbara, T. Aida “Supramolecular Machine for Conformational Remote Control of Chiral Molecules”, 18th International Symposium on Chirality, Busan, South Korea (2006).</li></li>
-                <li><li data-kind=''>H. Kai, S. Nara, M. Muraoka, K. Kinbara, T. Aida “Molecular Design of a Light-Driven Supramolecular Machine”, The 86th Annual Meeting of the Chemical Society of Japan, Funabashi, Japan (2006).</li></li>
-            </ol>
-          </section>
+            <section id='presentation'>
+                <ol class='publication' reversed>
+                    <li data-kind=''>Hiroyuki Kai, Ryoma Toyosato, Matsuhiko Nishizawa “Mechanism for droplet collection by open microfluidic channels with hierarchically branching structures“, Cheminas 37, Tsukuba, Japan (2018).</li>
+                    <li data-kind=''>Hiroyuki Kai, Ryoma Toyosato, Matsuhiko Nishizawa ““Mathematical microfluidics” – fractal, space-filling open microfluidic channels for the efficient collection of water droplets.“, CEMSupra 2018, Tokyo, Japan (2018).</li>
+                    <li data-kind=''>Hiroyuki Kai, Hiroki Kumata, Jun Kubota, Shinya Kusama, Kuniaki Nagamine, Matsuhiko Nishizawa “Development of porous polymer microneedles and their applications to transdermal interfaces“, 27th Annual Meeting of MRS-J, Yokohama, Japan (2017).</li>
+                    <li data-kind=''>Hiroyuki Kai, Hiroki Kumata, Jun Kubota, Matsuhiko Nishizawa “Porous microneedle array made of a polymer monolith for the analysis of interstitial fluid“, 66th Symposium on Macromolecules, Matsuyama, Japan (2017).</li>
+                    <li data-kind=''>Hiroyuki Kai, Ryoma Toyosato, Matsuhiko Nishizawa “Water collection by hierarchical patterning of surface wettability“, The 78th JSAP Autumn Meeting, Fukuoka, Japan (2017).</li>
+                    <li data-kind=''>Hiroyuki Kai “Development of wearable sweat sensor patches made of organic and polymer materials“ (Invited), ISPAC 2017, Ho Chi Minh City, Vietnam (2017).</li>
+                    <li data-kind=''>Hiroyuki Kai, Ayaka Tsubota, Yudai Ogawa, Matsuhiko Nishizawa “Accelerated would healing by an enzymatic biofuel cell plaster“ (Invited), 26th Annual Meeting of MRS-J, Yokohama, Japan (2016).</li>
+                    <li data-kind=''>Hiroyuki Kai “Development of enzymatic biofuel cells toward epidermal electronics” (Invited), Semi-Conference, Aomori, Japan (2016).</li>
+                    <li data-kind=''>Hiroyuki Kai, Liming Liu, Kuniaki Nagamine, Yudai Ogawa, Matsuhiko Nishizawa “Porous Polymer Microneedles with Interconnecting Microchannels Toward Efficient Sensing of Interstitial Fluid”, PRiME 2016, Honolulu, HI, USA (2016).</li>
+                    <li data-kind=''>Hiroyuki Kai, Liming Liu, Kuniaki Nagamine, Yudai Ogawa, Matsuhiko Nishizawa “Porous polymer microneedles toward the efficient interface with skin”, ICFPE 2016, Yonezawa, Japan (2016).</li>
+                    <li data-kind=''>Hiroyuki Kai, Kuniaki Nagamine, Matsuhiko Nishizawa “Stretchable Patches and Devices Toward Electronics on the Skin” (Invited), IEEE Nano 2016, Sendai, Japan (2016).</li>
+                    <li data-kind=''>Hiroyuki Kai, Liming Liu, Kuniaki Nagamine, Yudai Ogawa, Matsuhiko Nishizawa “Polymer microneedle arrays with continuous pores for minimally invasive monitoring of interstitial fluid”, The 83rd Meeting of the Electrochemical Society of Japan, Osaka, Japan (2016).</li>
+                    <li data-kind=''>M. Nishizawa, K. Nagamine, H. Kai “Organic skin patch with built-in enzymatic battery”, MEMS 2016, Shanghai, China (2016).</li>
+                    <li data-kind=''>H. Kai, S. Chihara, D. Okabe, K. Nagamine and M. Nishizawa “Electrode-Hydrogel Hybrids for Biocompatible, Stretchable Electronics”, 25th Annual Meeting of MRS-J, Yokohama, Japan (2015)</li>
+                    <li data-kind=''>H. Kai, N. Caculitan, T. Lohmüller, E. Liu, N. Fay, Y. Yu, J. T. Groves “Dynamic behavior of TCR microclusters on a live cell investigated by a gold nanoparticle array”, Biophysical Society 58th Annual Meeting, San Francisco, CA (2014).</li>
+                    <li data-kind=''>H. Kai, N. Caculitan, T. Lohmüller, E. Liu, N. Fay, Y. Yu, J. T. Groves “Investigating the Dynamic Behavior of TCR Microclusters by a Gold Nanoparticle Array”, Biophysical Society 57th Annual Meeting, Philadelphia, PA (2013).</li>
+                    <li data-kind=''>H. Kai, N. Morishita, M. Iji “Self-assembled nanoparticles with three functional layers for toughening of brittle thermoplastic”, The 18th Polymer Materials Forum, Funabori, Japan (2009).</li>
+                    <li data-kind=''>H. Kai, K. Kinbara, T. Aida “Design of Supramolecular Machines:  A Mechanism for Power Transmission to a Spatially Remote Place”, The 88th Annual Meeting of the Chemical Society of Japan, Tokyo, Japan (2008).</li>
+                    <li data-kind=''>H. Kai, K. Kinbara, T. Aida “Design of Supramolecular Machines for Remote Transmission of Mechanical Motions”, The 87th Annual Meeting of the Chemical Society of Japan, Osaka, Japan (2007).</li>
+                    <li data-kind=''>H. Kai, K. Kinbara, T. Aida “Design of Supramolecular Machines for Remote Control of Molecules”, The 56th Japan Society of Coordination Chemistry Annual Meeting, Hiroshima, Japan (2006).</li>
+                    <li data-kind=''>H. Kai, K. Kinbara, T. Aida “Supramolecular Machine for Conformational Remote Control of Chiral Molecules”, 18th International Symposium on Chirality, Busan, South Korea (2006).</li>
+                    <li data-kind=''>H. Kai, S. Nara, M. Muraoka, K. Kinbara, T. Aida “Molecular Design of a Light-Driven Supramolecular Machine”, The 86th Annual Meeting of the Chemical Society of Japan, Funabashi, Japan (2006).</li>
+                </ol>
+            </section>
         </div>
     </div>
 </div>
-
-
-
         </div>
 
     </div>
