--- a/about/presentation.ja.html
+++ b/about/presentation.ja.html
@@ -116,7 +116,8 @@
             <h3 id='plan'>発表予定</h3>
             <p>自分で行う発表のみを表記。</p>
             <ul class='publication' reversed>
-                <li>To be announced.</li>
+                <li data-kind='oral'>2019年9月22日 11:45-12:15 <a href='https://tohoku.chemistry.or.jp/taikai.html'>2019年度化学系学協会東北大会</a>（山形大学小白川キャンパス）<br>Development of microfluidic materials toward biosensing on a living body（依頼講演）<a href=https://tohoku.chemistry.or.jp/R01denki-p.pdf>[プログラム]</a><br>甲斐洋行</li></li>
+                <li data-kind='poster'>2019年10月29日 14:00-16:30 <a href='https://microtas2019.org/'>µTAS 2019</a>（Congress Center Basel, Basel, Switzerland）<br>POROUS MICRONEEDLE ELECTRODES FOR THE ELECTROCHEMICAL SENSING ON SKIN（ポスター発表）<a href=https://microtas2019.org/program/MicroTAS2019_PreliminaryProgram.pdf>[プログラム]</a><br>Hiroyuki Kai</li></li>
             </ul>
 
             <h3>発表</h3>
