--- a/about/index.ja.html
+++ b/about/index.ja.html
@@ -132,7 +132,7 @@
             <div class="photo-annotation">ギリシャ サントリーニ島からの眺め</div>
             <p class="lead">材料化学をベースにし、皮膚と密接に相互作用するウェアラブルデバイスへと展開しています。</p>
 
-            <p>ニュース：　2019年4月1日付けでAIMRに移籍しました。</p>
+            <p>ニュース：　9月に3件発表します。（9月3日）</p>
 
             <h3>所属</h3>
             東北大学材料科学高等研究所（AIMR）助教（Y.P.Chen-Kumatani Group）（2019年4月より）<br>
