--- a/about/presentation.ja.html
+++ b/about/presentation.ja.html
@@ -116,6 +116,8 @@
             <h3 id='plan'>発表予定</h3>
             <p>自分で行う発表のみを表記。</p>
             <ul class='publication' reversed>
+                <li data-kind='oral'>2019年9月5日 10:10-10:30 <a href='http://www.knt.co.jp/ec/2019/biojointsympo/index.html'>第13回バイオ関連化学シンポジウム2019</a>（東北大学青葉山東キャンパス）<br>2C-22 皮膚組織液センサのための多孔質マイクロニードル電極（口頭発表）<a href=http://www.knt.co.jp/ec/2019/biojointsympo/pdf/program_day2.pdf>[プログラム]</a><br>甲斐洋行</li></li>
+                <li data-kind='poster'>2019年9月19日 16:10-17:40 <a href='https://coi-conference.github.io/2019/index.html'>第2回COI学会</a>（日本科学未来館）<br>水滴を効率よく収集するフラクタル開放型流路の設計（ポスター発表）<a href=https://coi-conference.github.io/2019/program.html>[プログラム]</a><br>甲斐洋行</li></li>
                 <li data-kind='oral'>2019年9月22日 11:45-12:15 <a href='https://tohoku.chemistry.or.jp/taikai.html'>2019年度化学系学協会東北大会</a>（山形大学小白川キャンパス）<br>Development of microfluidic materials toward biosensing on a living body（依頼講演）<a href=https://tohoku.chemistry.or.jp/R01denki-p.pdf>[プログラム]</a><br>甲斐洋行</li></li>
                 <li data-kind='poster'>2019年10月29日 14:00-16:30 <a href='https://microtas2019.org/'>µTAS 2019</a>（Congress Center Basel, Basel, Switzerland）<br>POROUS MICRONEEDLE ELECTRODES FOR THE ELECTROCHEMICAL SENSING ON SKIN（ポスター発表）<a href=https://microtas2019.org/program/MicroTAS2019_PreliminaryProgram.pdf>[プログラム]</a><br>Hiroyuki Kai</li></li>
             </ul>
