--- a/about/index.ja.html
+++ b/about/index.ja.html
@@ -150,7 +150,7 @@
             <h3>経歴</h3>
             <ul>
                 <li>2019-: 東北大学材料科学高等研究所（AIMR） 助教</li>
-                <li>2015-2019: 東北大学工学研究科ファインメカニクス専攻　特任助教</li>
+                <li>2015-2019: 東北大学工学研究科ファインメカニクス専攻　特任助教（西澤松彦教授 研究室）</li>
                 <li>2010-2015: カリフォルニア大学バークレー校化学科大学院。PhD in Chemistry（指導教官：Jay T. Groves教授）</li>
                 <li>2008-2010: 日本電気ナノエレクトロニクス研究所</li>
                 <li>2006-2008: 東京大学大学院工学系研究科化学生命工学専攻　修士課程（指導教官：相田卓三教授）</li>
