--- a/about/presentation.ja.html
+++ b/about/presentation.ja.html
@@ -127,7 +127,7 @@
                 <button class='btn btn-sm btn-default active' data-toggle="button" id='outreach'>展示会・アウトリーチ</button>
             </div>
             <ol class='publication' reversed>
-                <li data-kind='oral'><span class='authors'>甲斐洋行<br/></span><span class='title'>Development of microfluidic materials toward biosensing on a living body<strong>（招待講演）</strong><br/></span><span class='conference'><a href='https://tohoku.chemistry.or.jp/taikai.html'>2019年度化学系学協会東北大会</a> (2019年9月22日; 山形大学小白川キャンパス)<br/></span></li>
+                <li data-kind='oral'><span class='authors'>甲斐洋行<br/></span><span class='title'>Development of microfluidic materials toward biosensing on a living body<strong>（依頼講演）</strong><br/></span><span class='conference'><a href='https://tohoku.chemistry.or.jp/taikai.html'>2019年度化学系学協会東北大会</a> (2019年9月22日; 山形大学小白川キャンパス)<br/></span></li>
                 <li data-kind='poster'><span class='authors'>甲斐洋行<br/></span><span class='title'>水滴を効率よく収集するフラクタル開放型流路の設計<br/></span><span class='conference'><a href='https://coi-conference.github.io/2019/index.html'>第2回COI学会</a> (2019年9月19日; 日本科学未来館)<br/></span></li>
                 <li data-kind='oral'><span class='authors'>甲斐洋行<br/></span><span class='title'>皮膚組織液センサのための多孔質マイクロニードル電極<br/></span><span class='conference'><a href='http://www.knt.co.jp/ec/2019/biojointsympo/index.html'>第13回バイオ関連化学シンポジウム2019</a> (2019年9月5日; 東北大学青葉山東キャンパス)<br/></span></li>
                 <li data-kind='outreach'><span class='authors'>甲斐洋行<br/></span><span class='title'>新規構造マイクロニードルによる疾患診断・治療デバイス<br/></span><span class='conference'><a href='https://shingi.jst.go.jp/kobetsu/COI/2019_coi.html'>JSTセンター・オブ・イノベーション（COI）プログラム　新技術説明会　～ヘルスケア関連～</a> (2019/5/30; JST東京本部別館1Fホール)<br/></span></li>
