--- a/about/grants.ja.html
+++ b/about/grants.ja.html
@@ -127,6 +127,8 @@
             <h3 id='plan'>受託研究費・学内グラント</h3>
             <p>主なものを以下に記載</p>
             <ol class='grant' reversed>
+                <li>2019年度 AIMR Fusion Research "Microfluidic, energy, and spin devices with fractal space-filling
+                    geometries"（代表）</li>
                 <li>2019年度 COI若手連携研究ファンド「タンパク質製剤の安心安全な利用を実現するポータブル・ウェアラブル計測・品質管理デバイスの開発」（共同代表）</li>
                 <li>2018年度 COI若手連携研究ファンド 若手デジタルFS「科学実験の効率を劇的に向上するための実験自動記録・実験計画支援・ラボオートメーション手法の探索」（代表）</li>
                 <li>2018年度 COI若手連携研究ファンド 若手デジタルFS「地域コミュニティで「育てる」ローカルモビリティを支援するためのデジタル技術」（共同代表）</li>
