--- a/about/presentation.html
+++ b/about/presentation.html
@@ -92,7 +92,7 @@
 <div class="content-header">
     <h1>
         <a id="menu-toggle" href="#" class="btn btn-default"><i class="icon-reorder"></i></a>
-        Presentations
+        Selected presentations
     </h1>
 </div>
 <!-- Keep all page content within the page-content inset div! -->
@@ -101,6 +101,9 @@
         <div class="col-md-12">
             <section id='presentation'>
                 <ol class='publication' reversed>
+                    <li data-kind='poster'><span class='authors'>Hiroyuki Kai<br/></span><span class='title'>POROUS MICRONEEDLE ELECTRODES FOR THE ELECTROCHEMICAL SENSING ON SKIN<br/></span><span class='conference'><a href='https://microtas2019.org/'>µTAS 2019</a> (2019年10月29日; Congress Center Basel, Basel, Switzerland)<br/></span></li>
+                    <li data-kind='oral'><span class='authors'>Hiroyuki Kai<br/></span><span class='title'>Development of microfluidic materials toward biosensing on a living body<strong>（Invited）</strong><br/></span><span class='conference'><a href='https://tohoku.chemistry.or.jp/taikai.html'>Joint Meeting of the Tohoku Area Chemistry Societies 2019</a> (2019年9月22日; Yamagata University)<br/></span></li>
+                    <li data-kind='poster'><span class='authors'>Hiroyuki Kai, Hiroki Kumata, Matsuhiko Nishizawa<br/></span><span class='title'>Porous Polymer Microneedles for the Sensing of Subcutaneous Interstitial Fluid<br/></span><span class='conference'><a href='https://www.mrs.org/docs/default-source/meetings-events/fall-meetings/2018/symposium-session-pdfs/symposium-bm08.pdf?sfvrsn=8d6fbb10_3'>MRS Fall 2018 Meeting</a> (2018/11/28; Boston, USA)<br/></span></li>
                     <li data-kind=''>Hiroyuki Kai, Ryoma Toyosato, Matsuhiko Nishizawa “Mechanism for droplet collection by open microfluidic channels with hierarchically branching structures“, Cheminas 37, Tsukuba, Japan (2018).</li>
                     <li data-kind=''>Hiroyuki Kai, Ryoma Toyosato, Matsuhiko Nishizawa ““Mathematical microfluidics” – fractal, space-filling open microfluidic channels for the efficient collection of water droplets.“, CEMSupra 2018, Tokyo, Japan (2018).</li>
                     <li data-kind=''>Hiroyuki Kai, Hiroki Kumata, Jun Kubota, Shinya Kusama, Kuniaki Nagamine, Matsuhiko Nishizawa “Development of porous polymer microneedles and their applications to transdermal interfaces“, 27th Annual Meeting of MRS-J, Yokohama, Japan (2017).</li>
