--- a/about/grants.html
+++ b/about/grants.html
@@ -92,7 +92,7 @@
 <div class="content-header">
     <h1>
         <a id="menu-toggle" href="#" class="btn btn-default"><i class="icon-reorder"></i></a>
-        Research grants
+        Selected list of research grants
     </h1>
 </div>
 <!-- Keep all page content within the page-content inset div! -->
@@ -101,20 +101,20 @@
         <div class="col-md-12">
             <section id='grant'>
                 <ol class='grant' reversed>
-                    <li>2018 Tohoku University Research Institutes Ensemble Grant for Young Researchers, 1st stage.</li>                    <li>2018 Tohoku University Research Institutes Ensemble Grant for Young Researchers, 2nd stage.</li>                    <li>2018 Tohoku University FRIS Creative Interdisciplinary Research Program.</li>
+                    <li>2018 Tohoku University Research Institutes Ensemble Grant for Young Researchers, 1st stage.</li>
+                    <li>2018 Tohoku University Research Institutes Ensemble Grant for Young Researchers, 2nd stage.</li>
+                    <li>2018 Tohoku University FRIS Creative Interdisciplinary Research Program.</li>
                     <li>2018 COI research grant for collaborative research by young researchers.</li>
                     <li>2018 The Kao Science Encouragement Award.</li>
                     <li>2017 Tohoku University Research Institutes Ensemble Grant for Young Researchers, 1st stage.</li>
-                    <li>2017-2018 JSPS Grant-in-Aid for Young Scientists (B): &quot;Development of multiplexed microneedle array for vital sensing on skin.&quot;</li>
+                    <li>2017-2018 JSPS Grant-in-Aid for Young Scientists (B): &quot;Development of multiplexed
+                        microneedle array for vital sensing on skin.&quot;</li>
                     <li>2017 COI research grant for collaborative research by young researchers.</li>
                 </ol>
-            </section>      
+            </section>
         </div>
     </div>
 </div>
-
-
-
         </div>
 
     </div>
