--- a/about/index.ja.html
+++ b/about/index.ja.html
@@ -132,9 +132,15 @@
             <div class="photo-annotation">ギリシャ サントリーニ島からの眺め</div>
             <p class="lead">材料化学をベースにし、皮膚と密接に相互作用するウェアラブルデバイスへと展開しています。</p>
 
-            <p>ニュース：　金メッキ多孔質マイクロニードルによるグルコースセンサに関する論文が，<a
-                    href="https://iopscience.iop.org/article/10.1088/2515-7655/abe4a1">Journal of
-                    Physics: Energy</a>に受理されました（2021年2月9日）。
+            <p>ニュース
+            <ul>
+                <li>科研費 基盤研究(B)に採択されました（2021年4月1日）。</li>
+                <li>
+                    金メッキ多孔質マイクロニードルによるグルコースセンサに関する論文が<a
+                        href="https://iopscience.iop.org/article/10.1088/2515-7655/abe4a1">Journal of
+                        Physics: Energy</a>に受理されました（2021年2月9日）。</li>
+            </ul>
+
             </p>
 
             <h3>所属</h3>
