Art timeline: comment css

--- a/timeline/index.html
+++ b/timeline/index.html
@@ -46,7 +46,7 @@
             cursor: pointer;
         }
         .France {
-//            fill:pink;
+            /* fill:pink; */
         }
         .painter {
             fill: pink;
@@ -61,7 +61,7 @@
             fill: #ce70e8;
         }
         rect.Japan {
- //           fill:purple;
+            /* fill:purple; */
         }
         .person-text{
             fill: #666;
@@ -76,7 +76,7 @@
         }
 
         #slider {
-        // height: 30px;
+         /* height: 30px; */
             width: 120px;
             margin: 20px 0px 20px 0px;
         }
