Art timeline: https

--- a/timeline/index.html
+++ b/timeline/index.html
@@ -7,12 +7,12 @@
     <!-- https://developer.mozilla.org/en-US/docs/Mozilla/Mobile/Viewport_meta_tag -->
     <meta name="viewport" content="width=620, initial-scale=1">
 
-    <meta property="og:image" content="http://hirokai.github.io/timeline/thumbnail.png"/>
+    <meta property="og:image" content="https://hirokai.github.io/timeline/thumbnail.png"/>
 
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
 
-    <link href='http://fonts.googleapis.com/css?family=Alef' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Alef' rel='stylesheet' type='text/css'>
 
     <style type="text/css">
         #svgdiv {
@@ -30,7 +30,7 @@
         }
 
         /*This is essential for correct axis drawing */
-        /* http://stackoverflow.com/questions/12148188/d3-js-yaxis-not-drawing-all-the-ticks-properly */
+        /* https://stackoverflow.com/questions/12148188/d3-js-yaxis-not-drawing-all-the-ticks-properly */
         .axis path,
         .axis line {
             fill: none;
@@ -231,21 +231,21 @@
 <div class='row' id='svgdiv'>
 </div>
     <div id="social">
-    <div class="fb-like" data-href="http://hirokai.github.io/timeline" data-width="300" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+    <div class="fb-like" data-href="https://hirokai.github.io/timeline" data-width="300" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
     <a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^https:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
     </div>
 </div>
 
 <!-- <script src='d3.js'></script> -->
 <!-- <script src='underscore.js'></script> -->
 
-<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js" charset="utf-8"></script>
+<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js" charset="utf-8"></script>
 
-<script type="text/javascript" src='http://code.jquery.com/jquery-1.10.2.min.js'></script>
-<script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+<script type="text/javascript" src='https://code.jquery.com/jquery-1.10.2.min.js'></script>
+<script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+<script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 <script type="text/javascript">
 $(function(){
 
@@ -288,7 +288,7 @@ $(function(){
 
     var svg = d3.select('#svgdiv').append('svg').attr('width',width).attr('height',height);
 
-    // http://www.h2.dion.ne.jp/~defghi/svgMemo/svgMemo_10.htm
+    // https://www.h2.dion.ne.jp/~defghi/svgMemo/svgMemo_10.htm
 //    svg.append('defs').append('clipPath').attr('id','clip').attr('clip-rule','evenodd')
 //            .append('rect').attr({x: 0,y:0,width: 800,height:300});
 
