Art timeline: https for twitter

--- a/timeline/index.html
+++ b/timeline/index.html
@@ -260,7 +260,7 @@
           !(function (d, s, id) {
             var js,
               fjs = d.getElementsByTagName(s)[0],
-              p = /^https:/.test(d.location) ? "http" : "https"
+              p = /^https:/.test(d.location) ? "https" : "http"
             if (!d.getElementById(id)) {
               js = d.createElement(s)
               js.id = id
