--- a/about/index.ja.html
+++ b/about/index.ja.html
@@ -134,26 +134,23 @@
 
             <p>ニュース
             <ul>
-                <li>バーチャルポスターセッションについて，7月27日（火）にオンライン開催される<a
-                        href="https://shingi.jst.go.jp/kobetsu/tohoku/2021_tohoku.html">JST新技術説明会</a>で発表します（2021年6月30日）。
+                <li>東北大学川内キャンパスで開催される応用物理学会秋季学術講演会で、9月22日（木）にポスター発表します（2022年7月27日）。
                 </li>
-                <li>科研費 基盤研究(B)に採択されました（2021年4月1日）。</li>
-                <li>
-                    金メッキ多孔質マイクロニードルによるグルコースセンサに関する論文が<a
-                        href="https://iopscience.iop.org/article/10.1088/2515-7655/abe4a1">Journal of
-                        Physics: Energy</a>に受理されました（2021年2月9日）。</li>
+                <li>東京理科大学の木下研究室（応用物理学科）に助教として着任しました（2022年4月1日）。
+                </li>
             </ul>
 
             </p>
 
             <h3>所属</h3>
-            東北大学材料科学高等研究所（AIMR）助教（Y.P.Chen-Kumatani Group）（2019年4月より）<br>
+            東京理科大学理学部第一部応用物理学科 助教（木下研究室）（2022年4月より）<br>
 
             <h3>研究内容</h3>
-            有機材料化学に立脚した，皮膚貼り付け型センサ・治療デバイスのための材料開発と生体応用
+            材料化学やマイクロ流体科学に立脚した，微小流体制御材料の構築とデバイス・センサ応用
 
             <h3>過去の研究内容</h3>
             <ul>
+                <li>ウェアラブル電気化学センサ・デバイスの開発</li>
                 <li>ナノ加工した材料を用いる、T細胞シグナリングの時空間制御のイメージング研究</li>
                 <li>分子の動きを遠隔に伝える超分子機械の作製</li>
                 <li>高強度バイオプラスチックと自己組織化添加剤の開発</li>
@@ -161,7 +158,8 @@
 
             <h3>経歴</h3>
             <ul>
-                <li>2019-: 東北大学材料科学高等研究所（AIMR） 助教</li>
+                <li>2022-: 東京理科大学理学部第一部応用物理学科 助教（木下健太郎教授 研究室）</li>
+                <li>2019-2022: 東北大学材料科学高等研究所（AIMR） 助教（熊谷明哉准教授 グループ）</li>
                 <li>2015-2019: 東北大学工学研究科ファインメカニクス専攻　特任助教（西澤松彦教授 研究室）</li>
                 <li>2010-2015: カリフォルニア大学バークレー校化学科大学院。PhD in Chemistry（指導教官：Jay T. Groves教授）</li>
                 <li>2008-2010: 日本電気ナノエレクトロニクス研究所</li>
