News, publication, presentation

--- a/about/index.ja.html
+++ b/about/index.ja.html
@@ -130,13 +130,13 @@
         <div class="col-md-12">
             <img src="img/welcome.jpg" width='105%' style="margin: -20px -50px 0px -20px;"><br>
             <div class="photo-annotation">ギリシャ サントリーニ島からの眺め</div>
-            <p class="lead">材料化学をベースにし、皮膚と密接に相互作用するウェアラブルデバイスへと展開しています。</p>
+            <p class="lead">材料化学を基板とした微小構造・表面制御を元に、マイクロ流体デバイスやウェアラブルセンサ・デバイスへと展開しています。</p>
 
             <p>ニュース
             <ul>
-                <li>東北大学川内キャンパスで開催される応用物理学会秋季学術講演会で、9月22日（木）にポスター発表します（2022年7月27日）。
+                <li>私が共著者として参加した東北大学の山本俊介先生の研究が、Advanced Materials Interfaces誌に<a href="https://doi.org/10.1002/admi.202201736">掲載</a>されました（2022年11月3日）。
                 </li>
-                <li>東京理科大学の木下研究室（応用物理学科）に助教として着任しました（2022年4月1日）。
+                <li>ボストンで開催される2022 MRS Fall Meetingにおいて、11月30日に口頭発表します（2022年11月3日）。
                 </li>
             </ul>
 
