Update affiliation and news

--- a/about/presentation.ja.html
+++ b/about/presentation.ja.html
@@ -116,7 +116,7 @@
             <h3 id='plan'>発表予定</h3>
             <p>自分で行う発表のみを表記。</p>
             <ul class='publication' reversed>
-                <li data-kind='oral'>2022年11月30日 13:45-14:00 <a href='https://www.mrs.org/meetings-events/fall-meetings-exhibits/2022-mrs-fall-meeting'>2022 MRS Fall Meeting</a>（Hynes Convention Center, Boston, MA, USA）<br>Alginate Hydrogel Formation by Microdroplet Reactions on the Open-Channel Microfluidics（口頭発表）<a href=https://www.mrs.org/meetings-events/fall-meetings-exhibits/2022-mrs-fall-meeting/symposium-sessions/symposium-sessions-detail/2022_mrs_fall_meeting/sb08>[プログラム]</a><br>Hiroyuki Kai</li></li>
+                <li data-kind='oral'>2023年6月28日 9:30-9:45 <a href='https://transducers2023.org/'>Transducers 2023</a>（Kyoto International Conference Center, Kyoto, Japan）<br>MICRODROPLET REACTIONS BY HYPERBRANCHED, SPACE-FILLING OPEN MICROFLUIDIC CHANNELS（口頭発表）<a href=https://transducers2023.org/files/Transducers2023_Program.pdf>[プログラム]</a><br>Hiroyuki Kai</li></li>
             </ul>
 
             <h3>発表</h3>
@@ -127,6 +127,7 @@
                 <button class='btn btn-sm btn-default active' data-toggle="button" id='outreach'>展示会・アウトリーチ</button>
             </div>
             <ol class='publication' reversed>
+                <li data-kind='oral'><span class='authors'>Hiroyuki Kai<br/></span><span class='title'>Alginate Hydrogel Formation by Microdroplet Reactions on the Open-Channel Microfluidics<br/></span><span class='conference'><a href='https://www.mrs.org/meetings-events/fall-meetings-exhibits/2022-mrs-fall-meeting'>2022 MRS Fall Meeting</a> (2022年11月30日; Hynes Convention Center, Boston, MA, USA)<br/></span></li>
                 <li data-kind='poster'><span class='authors'>甲斐洋行<br/></span><span class='title'>高分岐の開放型マイクロ流路による微小液滴反応器<br/></span><span class='conference'><a href='https://meeting.jsap.or.jp/jsap2022a/program'>2022年第83回応用物理学会秋季学術講演会</a> (2022年9月21日; 東北大学 川内キャンパス)<br/></span></li>
                 <li data-kind='poster'><span class='authors'>甲斐洋行<br/></span><span class='title'>分岐を有する開放型マイクロ流路における水滴輸送の自由表面流れ解析<br/></span><span class='conference'><a href='http://micro-nano.chips.jp/43/'>化学とマイクロ･ナノシステム学会 第43回研究会（CHEMINAS 43）</a> (2021年5月17日; オンライン)<br/></span></li>
                 <li data-kind='poster'><span class='authors'>Hiroyuki Kai<br/></span><span class='title'>SPACE-FILLING OPEN MICROFLUIDICS FOR DROPLET COLLECTION: GENERALIZED DESIGN OF FRACTAL HYPERBRANCHED CHANNELS<br/></span><span class='conference'><a href='https://microtas2020.org/'>MicroTAS 2020</a> (2020年10月8日; オンライン)<br/></span></li>
