--- a/about/contact.html
+++ b/about/contact.html
@@ -102,11 +102,11 @@
         <div class="col-md-12">
             <div>
                 Hiroyuki Kai <br>
-                Advanced Institute for Materials Research (AIMR)<br>
-                Tohoku University<br>
+                Department of Biomedical Engineering<br>
+                Toyo University<br>
                 Japan<br>
                 <br>
-                Email: kai[at]tohoku[dot]ac[dot]jp<br>
+                Email: kai009[at]toyo[dot]jp<br>
             </div>
         </div>
     </div>
