Add MRS presentation. Add news

--- a/about/index.ja.html
+++ b/about/index.ja.html
@@ -134,11 +134,8 @@
 
             <p>ニュース
             <ul>
+                <li>2023 MRS Fall Meetingで、不均一構造を有するマイクロニードル作製法についてポスター発表しました（東京大学 熊谷明哉先生との共著）。<br/>Best Poster Awardにノミネートされました（受賞はなりませんでした）。（2023年12月4日）
                 <li>油滴を輸送・収集するフラクタル開放型流路についての<a href="https://doi.org/10.1002/admi.202300340">論文</a>がAdvanced Materials Interfaces誌に掲載されました（2023年10月3日）。
-                </li>
-                <li>11月26日-12月1日にボストン（アメリカ）で開催される2023 MRS Fall Meetingで甲斐がポスター発表します（東京大学 熊谷明哉先生との共著）（2023年9月4日）。
-                </li>
-                <li>10月15日-19日にカトヴィツェ（ポーランド）で開催されるMicroTAS 2023で学生がポスター発表します（2023年9月4日）。
                 </li>
             </ul>
 
