--- a/about/index.ja.html
+++ b/about/index.ja.html
@@ -134,8 +134,7 @@
 
             <p>ニュース
             <ul>
-                <li>2023 MRS Fall Meetingで、不均一構造を有するマイクロニードル作製法についてポスター発表しました（東京大学 熊谷明哉先生との共著）。<br/>Best Poster Awardにノミネートされました（受賞はなりませんでした）。（2023年12月4日）
-                <li>油滴を輸送・収集するフラクタル開放型流路についての<a href="https://doi.org/10.1002/admi.202300340">論文</a>がAdvanced Materials Interfaces誌に掲載されました（2023年10月3日）。
+                <li>第34回日本MRS年次大会で、研究室のB4学生が「アルキルアミンで修飾した疎水性・親油性多孔質ポリマーモノリスの作製」という演題でポスター発表を行いました。（2023年12月16日）
                 </li>
             </ul>
 
